WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132893
REGRESSION(WK2): Many pages have very wrong text size after rotating
https://bugs.webkit.org/show_bug.cgi?id=132893
Summary
REGRESSION(WK2): Many pages have very wrong text size after rotating
Enrica Casucci
Reported
2014-05-13 17:23:01 PDT
Text autosizing seems to break most pages on rotation. <
rdar://problem/16806958
>
Attachments
Patch
(3.81 KB, patch)
2014-05-13 17:27 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-05-13 17:27:32 PDT
Created
attachment 231423
[details]
Patch
Benjamin Poulain
Comment 2
2014-05-13 17:30:40 PDT
Comment on
attachment 231423
[details]
Patch lgtm
Darin Adler
Comment 3
2014-05-13 22:43:13 PDT
Comment on
attachment 231423
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231423&action=review
Sure would be nice to have some kind of bottleneck function rather than having a width check in three different places.
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:1910 > + for (Frame* frame = &m_page->mainFrame(); frame; frame = frame->tree().traverseNext(&m_page->mainFrame())) {
This should just call traverseNext() with no arguments. There’s no reason to pass the main frame explicitly since there are no additional frames outside the main frame.
Enrica Casucci
Comment 4
2014-05-14 10:58:44 PDT
Thanks for the feedback. I've removed the parameter to traverseNext and changed resetTextAutosizingBeforeLayout to resetTextAutosizingBeforeLayoutIfNeeded which takes p;d and new size. This way the width check is inside the new method.
Enrica Casucci
Comment 5
2014-05-14 11:03:38 PDT
Committed revision 168848.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug