REGRESSION(WK2): Many pages have very wrong text size after rotating. https://bugs.webkit.org/show_bug.cgi?id=132893 <rdar://problem/16806958>

Reviewed by Benjamin Poulain.

Whenever our viewport width changes we must reset text autosizing
on the renderer.

* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::setViewportConfigurationMinimumLayoutSize):
(WebKit::WebPage::setMinimumLayoutSizeForMinimalUI):
(WebKit::WebPage::resetTextAutosizingBeforeLayoutIfNeeded):
(WebKit::WebPage::dynamicViewportSizeUpdate):



Canonical link: https://commits.webkit.org/150974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168848 268f45cc-cd09-0410-ab3c-d52691b4dbfc